components/forgejo/patch-delete-helm-test-pod.yaml
$patch: delete
apiVersion: v1
kind: Pod
metadata:
  name: forgejo-test-connection
