components/forgejo/ingress-forgejo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
  namespace: forgejo
  annotations:
    kube-vip.io/loadbalancerIPs: 192.168.13.6
    cert-manager.io/cluster-issuer: "local-ca-issuer"
spec:
  ingressClassName: cilium
  rules:
  - host: forgejo.nekropolis.irminsul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forgejo-http
            port:
              number: 3000
  - host: forgejo.irminsul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: forgejo-http
            port:
              number: 3000
  tls:
  - hosts:
    - forgejo.nekropolis.irminsul
    - forgejo.irminsul
    secretName: forgejo
